--- a/src/com/bank/ui/Transferencia.form
+++ b/src/com/bank/ui/Transferencia.form
@@ -77,7 +77,7 @@
               <Component id="jToolBar1" min="-2" pref="73" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="jLabel1" min="-2" max="-2" attributes="0"/>
-              <EmptySpace type="unrelated" pref="41" max="32767" attributes="0"/>
+              <EmptySpace type="separate" pref="21" max="32767" attributes="0"/>
               <Component id="jSeparator1" min="-2" pref="10" max="-2" attributes="0"/>
               <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
               <Component id="lb_nombreCliente" min="-2" max="-2" attributes="0"/>
@@ -101,7 +101,7 @@
                   <Component id="btn_transferir" min="-2" pref="28" max="-2" attributes="0"/>
                   <Component id="btn_nuevaTransferencia" max="32767" attributes="0"/>
               </Group>
-              <EmptySpace pref="54" max="32767" attributes="0"/>
+              <EmptySpace pref="45" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
